_build/parser.output
   0  $accept : %entry% $end

   1  debut : clist EOF

   2  clist : singlecomm clist
   3        | singlecomm

   4  singlecomm : cell EQUAL formula
   5             | SHOW cell
   6             | SHOWALL
   7             | SHOWVAL cell
   8             | SHOWALLVAL
   9             | SHOWERROR cell
  10             | SHOWALLERROR

  11  cell : CELLROW INT

  12  operand : SUM
  13          | MULT
  14          | AVERAGE
  15          | MAX

  16  formula : NBR
  17          | INT
  18          | cell
  19          | operand LPAREN forlist RPAREN

  20  forlist : formula
  21          | formula SEMICOL forlist

  22  %entry% : '\001' debut

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . debut  (22)

	CELLROW  shift 3
	SHOW  shift 4
	SHOWALL  shift 5
	SHOWVAL  shift 6
	SHOWALLVAL  shift 7
	SHOWERROR  shift 8
	SHOWALLERROR  shift 9
	.  error

	debut  goto 10
	clist  goto 11
	singlecomm  goto 12
	cell  goto 13


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	cell : CELLROW . INT  (11)

	INT  shift 14
	.  error


state 4
	singlecomm : SHOW . cell  (5)

	CELLROW  shift 3
	.  error

	cell  goto 15


state 5
	singlecomm : SHOWALL .  (6)

	.  reduce 6


state 6
	singlecomm : SHOWVAL . cell  (7)

	CELLROW  shift 3
	.  error

	cell  goto 16


state 7
	singlecomm : SHOWALLVAL .  (8)

	.  reduce 8


state 8
	singlecomm : SHOWERROR . cell  (9)

	CELLROW  shift 3
	.  error

	cell  goto 17


state 9
	singlecomm : SHOWALLERROR .  (10)

	.  reduce 10


state 10
	%entry% : '\001' debut .  (22)

	.  reduce 22


state 11
	debut : clist . EOF  (1)

	EOF  shift 18
	.  error


state 12
	clist : singlecomm . clist  (2)
	clist : singlecomm .  (3)

	CELLROW  shift 3
	SHOW  shift 4
	SHOWALL  shift 5
	SHOWVAL  shift 6
	SHOWALLVAL  shift 7
	SHOWERROR  shift 8
	SHOWALLERROR  shift 9
	EOF  reduce 3

	clist  goto 19
	singlecomm  goto 12
	cell  goto 13


state 13
	singlecomm : cell . EQUAL formula  (4)

	EQUAL  shift 20
	.  error


state 14
	cell : CELLROW INT .  (11)

	.  reduce 11


state 15
	singlecomm : SHOW cell .  (5)

	.  reduce 5


state 16
	singlecomm : SHOWVAL cell .  (7)

	.  reduce 7


state 17
	singlecomm : SHOWERROR cell .  (9)

	.  reduce 9


state 18
	debut : clist EOF .  (1)

	.  reduce 1


state 19
	clist : singlecomm clist .  (2)

	.  reduce 2


state 20
	singlecomm : cell EQUAL . formula  (4)

	INT  shift 21
	NBR  shift 22
	CELLROW  shift 3
	SUM  shift 23
	MULT  shift 24
	AVERAGE  shift 25
	MAX  shift 26
	.  error

	cell  goto 27
	formula  goto 28
	operand  goto 29


state 21
	formula : INT .  (17)

	.  reduce 17


state 22
	formula : NBR .  (16)

	.  reduce 16


state 23
	operand : SUM .  (12)

	.  reduce 12


state 24
	operand : MULT .  (13)

	.  reduce 13


state 25
	operand : AVERAGE .  (14)

	.  reduce 14


state 26
	operand : MAX .  (15)

	.  reduce 15


state 27
	formula : cell .  (18)

	.  reduce 18


state 28
	singlecomm : cell EQUAL formula .  (4)

	.  reduce 4


state 29
	formula : operand . LPAREN forlist RPAREN  (19)

	LPAREN  shift 30
	.  error


state 30
	formula : operand LPAREN . forlist RPAREN  (19)

	INT  shift 21
	NBR  shift 22
	CELLROW  shift 3
	SUM  shift 23
	MULT  shift 24
	AVERAGE  shift 25
	MAX  shift 26
	.  error

	cell  goto 27
	formula  goto 31
	operand  goto 29
	forlist  goto 32


state 31
	forlist : formula .  (20)
	forlist : formula . SEMICOL forlist  (21)

	SEMICOL  shift 33
	RPAREN  reduce 20


state 32
	formula : operand LPAREN forlist . RPAREN  (19)

	RPAREN  shift 34
	.  error


state 33
	forlist : formula SEMICOL . forlist  (21)

	INT  shift 21
	NBR  shift 22
	CELLROW  shift 3
	SUM  shift 23
	MULT  shift 24
	AVERAGE  shift 25
	MAX  shift 26
	.  error

	cell  goto 27
	formula  goto 31
	operand  goto 29
	forlist  goto 35


state 34
	formula : operand LPAREN forlist RPAREN .  (19)

	.  reduce 19


state 35
	forlist : formula SEMICOL forlist .  (21)

	.  reduce 21


22 terminals, 9 nonterminals
23 grammar rules, 36 states
